The End, For Now

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/hotels/
+    - assets/images/activities/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
